--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <style>
   [data-custom-class='body'], [data-custom-class='body'] * {
-          background: black !important;
-          color: white !important;
+          background: transparent !important;
         }
 [data-custom-class='title'], [data-custom-class='title'] * {
           font-family: Arial !important;
 font-size: 26px !important;
-color: white !important;
+color: #000000 !important;
         }
 [data-custom-class='subtitle'], [data-custom-class='subtitle'] * {
           font-family: Arial !important;
@@ -16,12 +15,12 @@ font-size: 14px !important;
 [data-custom-class='heading_1'], [data-custom-class='heading_1'] * {
           font-family: Arial !important;
 font-size: 19px !important;
-color: white !important;
+color: #000000 !important;
         }
 [data-custom-class='heading_2'], [data-custom-class='heading_2'] * {
           font-family: Arial !important;
 font-size: 17px !important;
-color: white !important;
+color: #000000 !important;
         }
 [data-custom-class='body_text'], [data-custom-class='body_text'] * {
           color: #595959 !important;
